--- a/src/Home.css
+++ b/src/Home.css
@@ -14,6 +14,10 @@
     font-size: 1.3em;
   }
 
+  .value:hover {
+    transform: scale(1.3, 1.3);
+  }
+
   .value-text {
     font-size: .7em;
   }
